--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="clean.css" />
     <!-- <title></title> -->
+    <style>
+      body {
+        background-color: black;
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
